# sphinx-audeering-theme

./: .buildinfo  .gitignore  .sourcery.yaml  Apache-License-2.0.txt  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  OFL-License.txt  README.rst  changelog.html  contributing.html  example-api.html  example-wide-pages.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  example-api.doctree  example-wide-pages.doctree  index.doctree  installation.doctree  usage.doctree
.github/workflows/: linter.yml  publish.yml  python-package.yml  python-publish.yml  test.yml
_sources/: example-wide-pages.rst.txt
_static/css/: audeering.css
docs/: conf.py  example-api.rst  example-wide-pages.rst  index.rst  installation.rst  requirements.txt  usage.rst
sphinx_audeering_theme/: __init__.py  breadcrumbs.html  footer.html  layout.html  search.html  theme.conf
sphinx_audeering_theme/static/css/: audeering.css  theme.css
tests/: requirements.txt  test_basic.py
