[metadata]
name = sphinx_audeering_theme
author= Hagen Wierstorf
author_email = hwierstorf@audeering.com
url = https://github.com/audeering/sphinx-audeering-theme/
project-urls =
    Documentation = https://sphinx-audeering-theme.readthedocs.io
description = Sphinx documentation audEERING theme
license = MIT
license-file = LICENSE
keywords = sphinx, documentation, html
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Software Development :: Documentation

[options]
packages = find:
install_requires =
    sphinx
    sphinx_rtd_theme
setup_requires =
    setuptools_scm
