[metadata]
name = sphinx_audeering_theme
author= Hagen Wierstorf
author_email = hwierstorf@audeering.com
url = https://github.com/audeering/sphinx-audeering-theme/
project_urls =
    Documentation = https://audeering.github.io/sphinx-audeering-theme/
description = Sphinx documentation audEERING theme
long_description = file: README.rst
license = MIT
license_file = LICENSE
keywords = sphinx, documentation, html
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Documentation

[options]
packages = find:
install_requires =
    sphinx
    sphinx_rtd_theme ==0.4.3
    docutils <0.17  # https://github.com/sphinx-doc/sphinx/issues/9088
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
